syntax = "proto3";

message Message {

    message Status
    {
        bool success = 1;
        int32 error_code = 2;
        repeated string narrative = 3;
    }

    string uri = 1;
    bytes body = 2;
    uint64 id = 3;
    Status status = 4;
}